healthrpobtest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: web
    kind: frontend
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: web
        type: frontend
    spec:
      containers:
        - name: nginx-container
          image:  nginx:alpine
          ports:
          - name: liveness-port
            containerPort: 8080
            hostPort: 8080

          livenessProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 1
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /
              port: liveness-port
            failureThreshold: 5
            periodSeconds: 10
          
  replicas: 1
  selector:
    matchLabels:
      type: frontend
