healthy-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: healthy-pod
  labels:
    app: web
spec:
  containers:
    - name: nginx-container
      image: nginx
      readinessProbe:
        initialDelaySeconds: 5
        periodSeconds: 3
        timeoutSeconds: 1
        failureThreshould: 7
      livenessProbe:
        initialDelaySeconds: 5
        periodSeconds: 3
        timeoutSeconds: 1
        failureThreshold: 5
