lab-pod.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: mydeployment
    kind: frontend
spec:
  template:
    metadata:
      name: my-first-pod
      labels:
        app: myFirstPod
        type: frontend
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
          volumeMounts:
          - name: nginx-vol
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-vol
          persistentVolumeClaim:
            claimName: lab-pvc
  replicas: 2
  selector:
    matchLabels:
      type: frontend
