multiPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
  labels:
    app: multi-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:alpine
    - name: redis-container
      image: redis
    - name: memcached-container
      image: memcached
