nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: web
    kind: frontend
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: web
        type: frontend
    spec:
      containers:
        - name: nginx-container
          image:  nginx:alpine
  replicas: 3
  selector:
    matchLabels:
      type: frontend
