svc-app.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-svc
spec:
  type: NodePort
  ports:
    - name: http
      port: 80 #This is a serive port
      targetPort: 80 #This is the target port of the pods
      nodePort: 31089 #This port is enable on node to send the traffic
      protocol: TCP
  selector:
      app: nginx-deploy
